<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/counterTextView"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" tools:text="0"
            app:layout_constraintBottom_toTopOf="@+id/guideline"/>
    <Button
            android:id="@+id/countButton"
            android:text="@string/count"
            style="@style/BigButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onCountClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/clearButton" android:layout_marginBottom="@dimen/space24dp"
            android:layout_marginStart="@dimen/space24dp"
            android:layout_marginEnd="@dimen/space24dp"
            app:layout_constraintTop_toTopOf="@+id/guideline"/>
    <Button
            android:text="@string/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clearButton"
            android:onClick="onClearClick"
            android:layout_marginBottom="@dimen/space24dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/randomButton"/>
    <Button
            android:text="@string/random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/randomButton"
            android:onClick="onRandomClick"
            android:layout_marginBottom="@dimen/space24dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/clearButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>